# wer

./: .releaserc.json  CONTRIBUTING.md  Cargo.toml  Cargo.toml.bak  LICENSE.md  README.md  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: format.yml  release.yml  test.yml
src/: cli.rs  git.rs  main.rs  search.rs  syntax.rs  utils.rs
