[package]
name = "wer"
version = "1.1.0"
edition = "2024"
description = "A simple cli tool to find out who last edited files or directories of git repositories"
license = "MIT"
authors = ["Mats J Funke <mats.funke@gmail.com>"]
repository = "https://github.com/matsjfunke/wer"
homepage = "https://github.com/matsjfunke/wer"
keywords = ["git", "cli", "blame", "file-history"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
clap = { version = "1.1.0"] }
git2 = "0.18"
anyhow = "1.0"
chrono = { version = "1.1.0"] }
syntect = "5.1"
